--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-#osx_image: xcode7
+osx_image: xcode7
 xcode_project: Navigation.xcodeproj
 xcode_scheme: Navigation
 before_install:
